[gd_scene load_steps=5 format=3 uid="uid://demjkhdd30p0v"]

[ext_resource type="Script" path="res://scripts/turret_1.gd" id="1_3ha72"]
[ext_resource type="PackedScene" uid="uid://c0i2ix5nouwf0" path="res://assets/weapon-cannon.glb" id="1_rg2hj"]
[ext_resource type="PackedScene" uid="uid://bt7birbwdlqql" path="res://assets/tower-round-build-a.glb" id="2_po7db"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hyw00"]
radius = 3.0

[node name="Turret1" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
script = ExtResource("1_3ha72")

[node name="cannon" parent="." instance=ExtResource("1_rg2hj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="cannon"]

[node name="tower" parent="." instance=ExtResource("2_po7db")]

[node name="PatrolZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PatrolZone"]
shape = SubResource("CylinderShape3D_hyw00")

[connection signal="area_entered" from="PatrolZone" to="." method="_on_patrol_zone_area_entered"]
[connection signal="area_exited" from="PatrolZone" to="." method="_on_patrol_zone_area_exited"]
